inclusa _mixins.scss

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <ul class="main-menu">
                         <li>
                             <a id="dropped-link" href="#">Solutions <i class="fas fa-sort-down"></i></a>
-                            <ul class="sub-menu hidden">
+                            <ul class="sub-menu">
                                 <li><a href="#">Feedback</a></li>
                                 <li><a href="#">Survey</a></li>
                                 <li><a href="#">Review</a></li>
